// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/HeaderFooterTemplate should match snapshot with children 1`] = `
<div>
  <div
    class="inner-wrap"
  >
    <div
      class="row content"
    >
      <p>
        test
      </p>
    </div>
    <div
      class="row footer"
    >
      <div
        class="footer-pane col-xs-12"
        id="footer_section"
      >
        <div
          class="col-xs-12"
        >
          <span
            class="pull-right footer-site-name"
            id="company_name"
          >
            Mattermost
          </span>
        </div>
        <div
          class="col-xs-12"
        >
          <span
            class="pull-right footer-link copyright"
            id="copyright"
          >
            © 2015-2017 Mattermost
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should match snapshot without children 1`] = `
<div>
  <div
    class="inner-wrap"
  >
    <div
      class="row content"
    />
    <div
      class="row footer"
    >
      <div
        class="footer-pane col-xs-12"
        id="footer_section"
      >
        <div
          class="col-xs-12"
        >
          <span
            class="pull-right footer-site-name"
            id="company_name"
          >
            Mattermost
          </span>
        </div>
        <div
          class="col-xs-12"
        >
          <span
            class="pull-right footer-link copyright"
            id="copyright"
          >
            © 2015-2017 Mattermost
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should set classes on body and #root on mount and unset on unmount 1`] = `
<div>
  <div
    class="inner-wrap"
  >
    <div
      class="row content"
    />
    <div
      class="row footer"
    >
      <div
        class="footer-pane col-xs-12"
        id="footer_section"
      >
        <div
          class="col-xs-12"
        >
          <span
            class="pull-right footer-site-name"
            id="company_name"
          >
            Mattermost
          </span>
        </div>
        <div
          class="col-xs-12"
        >
          <span
            class="pull-right footer-link copyright"
            id="copyright"
          >
            © 2015-2017 Mattermost
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/HeaderFooterTemplate should set classes on body and #root on mount and unset on unmount 2`] = `<div />`;
